@@ -23,6 +23,10 @@
 #include "misc.h"
 #include "mlvalues.h"
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 CAMLextern value caml_alloc (mlsize_t, tag_t);
 CAMLextern value caml_alloc_small (mlsize_t, tag_t);
 CAMLextern value caml_alloc_tuple (mlsize_t);
@@ -43,5 +47,9 @@ CAMLextern value caml_alloc_final (mlsize_t, /*size in words*/
                                    mlsize_t  /*max resources*/);
 
 CAMLextern int caml_convert_flag_list (value, int *);
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif /* CAML_ALLOC_H */
